fixed spacing issue in products page

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -104,5 +104,9 @@ a:hover {
     color: #1f99a4;
 }
 
+.description {
+    height: 75px;
+    overflow: auto;
+}
 
 
